@@ -474,7 +474,8 @@ Internal use"
 (defun py--shell-manage-windows (output-buffer windows-config &optional exception-buffer)
   "Adapt or restore window configuration. Return nil "
   (let ((py-exception-buffer (or exception-buffer (and py-exception-buffer (buffer-live-p py-exception-buffer) py-exception-buffer)))
-	(output-buffer (or output-buffer py-buffer-name)))
+	(output-buffer (or output-buffer py-buffer-name))
+	(number-of-windows (length (window-list))))
     (cond
      (py-keep-windows-configuration
       (py-restore-window-configuration)
@@ -535,21 +536,16 @@ Internal use"
        py-split-window-on-execute
        (not py-switch-buffers-on-execute-p))
       (switch-to-buffer (current-buffer))
-      (unless
-	  (member (get-buffer-window output-buffer)(window-list))
-	(py--manage-windows-split py-exception-buffer output-buffer))
+      (when (< number-of-windows py-split-window-on-execute-threshold)
+	(unless
+	    (member (get-buffer-window output-buffer)(window-list))
+	  (py--manage-windows-split py-exception-buffer output-buffer)))
       ;; Fixme: otherwise new window appears above
       (save-excursion
 	(other-window 1)
 	(pop-to-buffer output-buffer)
 	(goto-char (point-max))
 	(other-window 1)))
-     ;; ((and
-     ;;   py-switch-buffers-on-execute-p
-     ;;   (not py-split-window-on-execute))
-     ;;  (set-buffer output-buffer)
-     ;;  (switch-to-buffer (current-buffer)))
-     ;; no split, no switch
      ((not py-switch-buffers-on-execute-p)
       (let (pop-up-windows)
 	(py-restore-window-configuration))))))
